--- a/sources/config-charted.yaml
+++ b/sources/config-charted.yaml
@@ -2,3 +2,4 @@ sources:
   - Jacquarda-Bastarda-9-Charted.glyphs
 familyName: Jacquarda Bastarda 9 Charted
 buildOTF: false
+extraFontmakeArgs: --filter "ufo2ft.filters.decomposeComponents::DecomposeComponentsFilter"
