--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -2,3 +2,4 @@ sources:
   - Jacquarda-Bastarda-9.glyphs
 familyName: Jacquarda Bastarda 9
 buildOTF: false
+extraFontmakeArgs: --filter "ufo2ft.filters.decomposeComponents::DecomposeComponentsFilter"
